--- a/src/pages/team/team.html
+++ b/src/pages/team/team.html
@@ -21,7 +21,7 @@
             </h2>
         </ion-col>
         <ion-card>
-            <ion-card-content>
+            <ion-card-content no-padding>
 
                 <ion-grid text-center>
                     <ion-row style="flex-wrap: wrap;">
