Added tab all results for the tournaments. Display right icon for sport in participant view

--- a/src/pages/participant/participant.html
+++ b/src/pages/participant/participant.html
@@ -33,9 +33,8 @@
                 <ion-grid text-center>
                     <ion-row style="flex-wrap: wrap;">
                         <ion-col width-50>
-                            <ion-icon name="game-controller-a" class="info"></ion-icon>
-                            <br/>
-                            <div class="items">{{ tournament.sport }}</div>
+                            <ion-img src="assets/sports/{{ setIconSports(tournament.sport) }}" width="35" height="35" class="sports-img"></ion-img>
+                            <div class="items sports-label">{{ tournament.sport }}</div>
                         </ion-col>
                         <ion-col width-50>
                             <ion-icon name="pin" class="info"></ion-icon>
@@ -53,9 +52,8 @@
                 <ion-grid text-center>
                     <ion-row style="flex-wrap: wrap;">
                         <ion-col width-50>
-                            <ion-icon name="game-controller-a" class="info"></ion-icon>
-                            <br/>
-                            <div class="items">{{ tournament.sport }}</div>
+                            <ion-img src="assets/sports/{{ setIconSports(tournament.sport) }}" width="35" height="35" class="sports-img"></ion-img>
+                            <div class="items sports-label">{{ tournament.sport }}</div>
                         </ion-col>
                         <ion-col width-50>
                             <ion-icon name="pin" class="info"></ion-icon>
