--- a/src/pages/tournament/tournament.html
+++ b/src/pages/tournament/tournament.html
@@ -55,7 +55,7 @@
                             {{ group.name }}
                         </ion-col>
                         <ion-col width-50 text-right no-padding>
-                            <ion-note>4 / 5</ion-note>
+                            <ion-note>{{group.playedMatchs}} / {{group.totalMatchs}}</ion-note>
                         </ion-col>
                     </ion-row>
                 </ion-item>
